add SD Updater for TF-CARD module.

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,10 @@ build_flags =
         -std=gnu++17
         -D CORE_DEBUG_LEVEL=4
         -D CONFIG_ARDUHAL_LOG_COLORS
+        -D ARDUINO_M5STACK_ATOM_AND_TFCARD
+        -D _MOSI=19
+        -D _MISO=33
+        -D _CLK=23
 
 build_unflags =
         -std=gnu++11
@@ -72,3 +76,4 @@ lib_deps =
         https://github.com/Hieromon/AutoConnect.git#v1.3.7
         https://github.com/LennartHennigs/Button2.git
         https://github.com/m5stack/M5GFX.git
+        https://github.com/riraosan/M5Stack-SD-Updater_with_Panel_CVBS.git#develop
